force-app/main/default/objects/API_Log__c/fields/Callout_Time__c.field-meta.xml
<CustomField>
    <fullName>Callout_Time__c</fullName>
    <label>Callout Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>