force-app/main/default/objects/API_Log__c/fields/Debug_Info__c.field-meta.xml
<CustomField>
    <fullName>Debug_Info__c</fullName>
    <label>Debug Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>