force-app/main/default/objects/API_Log__c/fields/Flag_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_Review__c</fullName>
    <label>Flag for Review</label>
    <type>DateTime</type>
</CustomField>