force-app/main/default/objects/API_Log__c/fields/Has_Debug_Info__c.field-meta.xml
<CustomField>
    <fullName>Has_Debug_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Debug Info</label>
    <type>Checkbox</type>
</CustomField>