force-app/main/default/objects/API_Log__c/fields/Logging_Time__c.field-meta.xml
<CustomField>
    <fullName>Logging_Time__c</fullName>
    <label>Logging Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>