force-app/main/default/objects/API_Log__c/fields/Notification_Body__c.field-meta.xml
<CustomField>
    <fullName>Notification_Body__c</fullName>
    <label>Notification Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>