force-app/main/default/objects/API_Log__c/fields/Notification_Send_To_4__c.field-meta.xml
<CustomField>
    <fullName>Notification_Send_To_4__c</fullName>
    <label>Notification Send To 4</label>
    <type>Email</type>
</CustomField>