force-app/main/default/objects/API_Log__c/fields/Notification_Subject__c.field-meta.xml
<CustomField>
    <fullName>Notification_Subject__c</fullName>
    <label>Notification Subject</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>