force-app/main/default/objects/API_Log__c/fields/Rate_Limit_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_Exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Limit Exceeded</label>
    <type>Checkbox</type>
</CustomField>