force-app/main/default/objects/API_Log__c/fields/Request_Body_End__c.field-meta.xml
<CustomField>
    <fullName>Request_Body_End__c</fullName>
    <label>Request Body End</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>