force-app/main/default/objects/API_Log__c/fields/Request_End_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Request_End_Timestamp__c</fullName>
    <label>Request End Timestamp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>