force-app/main/default/objects/API_Log__c/fields/Request_Params__c.field-meta.xml
<CustomField>
    <fullName>Request_Params__c</fullName>
    <label>Request Params</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>