force-app/main/default/objects/API_Log__c/fields/Request_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Request_Timestamp__c</fullName>
    <label>Request Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>