force-app/main/default/objects/API_Log__c/fields/Response_Headers__c.field-meta.xml
<CustomField>
    <fullName>Response_Headers__c</fullName>
    <label>Response Headers</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>