force-app/main/default/objects/API_Log__c/fields/Response_Length__c.field-meta.xml
<CustomField>
    <fullName>Response_Length__c</fullName>
    <label>Response Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>