force-app/main/default/objects/API_Log__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FinWise</fullName>
            </value>
            <value>
                <fullName>NACHA</fullName>
            </value>
            <value>
                <fullName>NDR</fullName>
            </value>
            <value>
                <fullName>GIACT</fullName>
            </value>
            <value>
                <fullName>IDA</fullName>
            </value>
            <value>
                <fullName>docs</fullName>
            </value>
            <value>
                <fullName>Doc Upload</fullName>
            </value>
            <value>
                <fullName>Emailage</fullName>
            </value>
            <value>
                <fullName>Web UI</fullName>
            </value>
            <value>
                <fullName>CreditAPI</fullName>
            </value>
            <value>
                <fullName>TWN</fullName>
            </value>
            <value>
                <fullName>Cloudinary</fullName>
            </value>
            <value>
                <fullName>AWS FTP</fullName>
            </value>
            <value>
                <fullName>Experian</fullName>
            </value>
            <value>
                <fullName>TransUnion</fullName>
            </value>
            <value>
                <fullName>TwilioSF</fullName>
            </value>
            <value>
                <fullName>BatchApexErrorEvent</fullName>
            </value>
            <value>
                <fullName>OutboundEmail</fullName>
            </value>
            <value>
                <fullName>FullStory</fullName>
            </value>
            <value>
                <fullName>Personalized Video</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Emails</fullName>
            </value>
            <value>
                <fullName>Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>