force-app/main/default/objects/API_Log__c/listviews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Tag__c</columns>
    <columns>Request_Method__c</columns>
    <columns>Request_URI__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Has_Errors__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>